--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ header{
  	height: 100%;
 }
 
-#container{
-	margin: auto;
+.container{
+	margin-left: 10%;
+	margin-right: 10%; 
 	padding: auto;
 }
 
@@ -23,10 +24,15 @@ h1 {
     color: white;
     margin-left: 10px;
 }	
-	
+
+#home_page{
+	width: 100%;
+	height: 100%;
+	display: flex;
+}	
+
 #main_section{
-	margin-left: 10%;
-	width: 50%;
+	width: 60%;
 	font-family: serif;
 	float: left;
 	background-color: white;
@@ -36,8 +42,7 @@ h1 {
  }
 
 #side_section{
-	width: 30%;
-	height: 100%;
+	width: 40%;
 	float: left;
 	padding: 0;
 	background-color: #f2f2f2;
@@ -62,6 +67,10 @@ img.logo{
 	text-align: center;
 }
 
+ul{
+	margin:0;
+}
+
 .dropbtn {
     background-color: #1c561e;
     color: white;
@@ -69,6 +78,8 @@ img.logo{
     font-size: 16px;
     border: none;
     cursor: pointer;
+    float: left;
+    list-style-type: none;
 }
 
 .dropdown {
@@ -83,6 +94,7 @@ img.logo{
     min-width: 160px;
     z-index: 100;
     opacity: 1	;
+    top: 100%;
 }
 
 .dropdown-content a {
@@ -104,12 +116,12 @@ img.logo{
     background-color: #3e8e41;
 }
 
-.submit_button{
-	text-align: center;
-}
-
 .dropbtn:hover {
 	background-color: #3e8e41;
+}
+
+.submit_button{
+	text-align: center;
 }
 
 .child {
@@ -142,6 +154,7 @@ img.logo{
 .aside_img {
 	max-width: 100%;
 	height: auto;
+	margin: 10%;
 }
 
 .read_btn {
@@ -157,15 +170,16 @@ img.logo{
 .sub_child {
  	position: relative;
  	border-bottom: 2px solid #fafafa;
- 	margin: 10%;
  	margin-bottom: 0;
  	padding: 10px;
 }
 
 .aside_topic {
-	font-family: "Proxima Nova Regular","Segoe UI",Roboto,"Droid Sans","Helvetica Neue",Arial,sans-serif;
+		font-family: "Proxima Nova Regular","Segoe UI",Roboto,"Droid Sans","Helvetica Neue",Arial,sans-serif;
     font-style: normal;
     font-weight: 400;
+    position: absolute;
+    padding: 3%;
 }
 
 .order_here {
@@ -181,14 +195,13 @@ footer {
 
 .footer_child {
 	text-align: center;
+	margin-top: 8px;
+	font-size: 11	px;
+	font-weight: 700;
 }
 
 .footer_img {
 	margin-top: auto;
-}
-
-h6 {
-	margin-top: 8px;
 }
 
 footer a {
@@ -217,9 +230,13 @@ img.logo {
 
 }
 nav {
-	padding-left: 33%;
+	padding-left: 28%;
 	padding-right: 30%;
 	background-color: #333;
+}
+
+#active {
+    background-color: #4CAF50;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px)
@@ -228,7 +245,7 @@ nav {
 	img.logo {		 
 		padding-left: 3%;
 		padding-top: 2%;
-		width: 20%
+		width: 20%;
 	}
 
 	.main_heading {
@@ -238,7 +255,7 @@ nav {
 	}
 
 	nav {
-		padding-left: 30%;
+		padding-left: 18%;
 		padding-right: 30%;
 		background-color: #333;
 	}
@@ -246,6 +263,7 @@ nav {
 .dropbtn {
 		display: block;
 		width: 100%;
+		float: none;
 	}
 
 .dropdown {
@@ -274,6 +292,7 @@ nav {
 	.dropbtn {
 		display: block;
 		width: 100%;
+		float: none;
 	}
 
 	.dropdown {
@@ -294,11 +313,12 @@ nav {
 		display: inline;
 	}
 	nav {
-		padding-left: 25%;
+		padding-left: 20%;
+		padding-right: 20%;
 	}
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1366px)
+@media screen and (min-width: 1025px) and (max-width: 1150px)
 {
 	img.logo { 		 
 		width: 12%;
@@ -308,4 +328,22 @@ nav {
 		margin-left: 15	px;
 		font-size: 40px;
 	}
+
+	nav {
+		padding-left: 24%;
+		padding-right: 20%;
+	}
+}
+
+@media screen and (min-width: 1151px)
+{
+	img.logo { 		 
+		width: 12%;
+	}
+	
+	.main_heading {
+		margin-left: 15	px;
+		font-size: 40px;
+	}
+
 }
