--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ footer {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	background-color: inherit;
 }
 
 .footer_child {
@@ -222,10 +223,6 @@ nav {
 	background-color: #333;
 }
 
-#home_content{
-	display: none;
-}
-
 #reg_form{
 	/*margin: 10% 20%;*/
 	background-color: #ececec;
@@ -233,22 +230,68 @@ nav {
 }
 
 #reg{
-	width: 25%;
+	width: 33%;
 	background-color: white;
 	margin: auto;
+	padding-bottom: 2%;	
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
 
 .regin_form{
-	width: 60%;
-	margin: auto;
+	width: 70%;
+	height: 36px;
+	border: thin solid gray;
+	margin-bottom: 3%; 
+	border-radius: 3.5%;
+	padding-left: 2%;
 }
 
 #reg_btn{
-	width: 40%;
+	width: 45%;
 	margin: auto;
+	background-color: #29962d;
+  color: white;
+  border-radius: 2px;
+  padding: 8px;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+}
+
+.reg_head{
+	text-align: center;
+	color: #29962d;
+}
+
+.display_flex {
+display: -webkit-box;
+display: -moz-box;
+display: flexbox;
+display: -webkit-flex;
+display: -moz-flex;
+display: -ms-flexbox;
+display: flex;        /* NEW, Spec - Opera 12.1, Firefox 20+ */
+justify-content: center;
+-webkit-justify-content: center;
+-webkit-box-pack: center; /* justify-content for safari old*/
+-webkit-box-align: center;
+-webkit-flex-align: center;
+-ms-flex-align: center;
+-webkit-align-items: center;
+align-items: center;
+-moz-align-items: center;
+-ms-align-items: center;
+-o-align-items: center;
+-moz-box-align: center;
+box-align: center;
+-ms-flex-align: center;
+-ms-flex-pack: center;
+}
+
+select{
+	background-color: white;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px)
