--- a/style.css
+++ b/style.css
@@ -282,6 +282,16 @@ select {
     color: white;
     text-decoration: none;
 }
+#home_btn {
+    text-decoration: none;
+    color: white;
+    width: 100%;
+}
+#reg_drpbtn {
+    text-decoration: none;
+    color: white;
+    width: 100%;
+}
 @media screen and (min-width: 320px) and (max-width: 480px) {
     img.logo {
         padding-left: 3%;
@@ -310,18 +320,16 @@ select {
     #footer_cpyright {
         font-size: 12px;
     }
+    #female{
+		margin-left: 36%;
+	}
 }
-#home_btn {
-    text-decoration: none;
-    color: white;
-    width: 100%;
+@media screen and (min-width: 481px) and (max-width: 501px) {
+	#female{
+		margin-left: 33%;
+	}
 }
-#reg_drpbtn {
-    text-decoration: none;
-    color: white;
-    width: 100%;
-}
-@media screen and (min-width: 481px) and (max-width: 838px) {
+@media screen and (min-width: 502px) and (max-width: 838px) {
     img.logo {
         width: 18%;
     }
